Projet GL/Projet_GL/src/test/deca/context/valid/increment2/int-op-int-int.deca
//Test : type_arith_op(int, int) = int;

//Resultats : 5

// Historique : cree le 09/01/2023

{
    int a,b,c;
    
    a = 2;
    b = 3;
    c = 2+3;

    println(c);
}